refactor: making extension functional not running manifest

--- a/pages/popup/index.html
+++ b/pages/popup/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="ko">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Popup</title>
+    <title>Popup GESIS Surf</title>
   </head>
 
-  <body>
+  <body style="width: 200px; height: 250px; margin: 0; padding: 0">
     <div id="app-container"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
